--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
   canvas.style.backgroundColor = "black";
 
   var face = new Image();
-  face.src = "https://github.com/orsolyasz/CodingTwo-Spring-2022/blob/main/Week%2006/p1.png";
+  face.src = "https://github.com/orsolyasz/piggy/blob/main/p1.png";
   var eyes = new Image();
-  eyes.src = "https://github.com/orsolyasz/CodingTwo-Spring-2022/blob/main/Week%2006/p2.png";
+  eyes.src = "https://github.com/orsolyasz/piggy/blob/main/p2.png";
   var ears = new Image();
-  ears.src = "https://github.com/orsolyasz/CodingTwo-Spring-2022/blob/main/Week%2006/p3.png";
+  ears.src = "https://github.com/orsolyasz/piggy/blob/main/p3.png";
   var nose = new Image();
-  nose.src = "https://github.com/orsolyasz/CodingTwo-Spring-2022/blob/main/Week%2006/p4.png";
+  nose.src = "https://github.com/orsolyasz/piggy/blob/main/p4.png";
 
   canvas.addEventListener('mousemove', getMouse, false);
 
