--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
   var nose = new Image();
   nose.src = "https://raw.githubusercontent.com/orsolyasz/piggy/main/p4.png";
 
-  canvas.addEventListener('mousemove', getMouse, false);
+  //canvas.addEventListener('mousemove', getMouse, false);
 
 
 
   function draw() {
-    context.drawImage(face, mouseX, mouseY,200,200);
+    context.drawImage(face, 400, 400,200,200);
   }
 
 
   requestAnimationFrame(draw);
 
 
-  function getMouse(mousePosition) {
-              mouseX = mousePosition.layerX;
-              mouseY = mousePosition.layerY;
-      }
+//   function getMouse(mousePosition) {
+//               mouseX = mousePosition.layerX;
+//               mouseY = mousePosition.layerY;
+//       }
 
 </script>
 </html>
