--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   //canvas.addEventListener('mousemove', getMouse, false);
 
-  context.drawImage(face, 400, 400,200,200);
+  canvas.drawImage(face, 400, 400,200,200);
 
   function draw() {
     
