--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
   nose.src = "https://raw.githubusercontent.com/orsolyasz/piggy/main/p4.png";
 
   canvas.addEventListener('mousemove', getMouse, false);
+    
+      context.drawImage(face, mouseX, mouseY,200,200);
+      context.drawImage(eyes, mouseX, mouseY,200,200);
 
 
   function draw() {
