--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     
       context.drawImage(face, mouseX, mouseY,200,200);
       context.drawImage(eyes, mouseX, mouseY,200,200);
+    canvas.drawImage(face, mouseX, mouseY,200,200);
+    canvas.drawImage(eyes, mouseX, mouseY,200,200);
 
 
   function draw() {
